fixed bg and specialists image gap

--- a/src/sass/components/_specialists.sass
+++ b/src/sass/components/_specialists.sass
@@ -14,6 +14,7 @@
 		overflow: hidden
 		position: relative
 		cursor: pointer
+		font-size: 0
 		&.width50
 			width: 50%
 		&:after
