--- a/src/sass/components/fullpage--editable.sass
+++ b/src/sass/components/fullpage--editable.sass
@@ -25,7 +25,7 @@
 		// 	background-image: url(../../img/bg-kaleidoscope.jpg)
 	.right
 		height: auto
-		margin-left: 50vw
+		margin-left: 50%
 		padding: 0px 40px 50px
 		background-color: #d0cfcd
 		background-image: url(../../img/bg-pattern-1-b.png)
